2.7/_sources/integrator/https.rst.txt
-----
HTTPS
-----

If your application is accessed in HTTPS, you have to make sure that all URLs
generated by the application (CSS and JavaScript files, images, MapServer
requests, etc.) use the HTTPS scheme as well. Otherwise the browser will
prompt "unsecure content" warnings.

There are two ways to manage this:

* application behind a proxy
* application and SSL certificate on the same server

Application behind a proxy
--------------------------

If the application is placed behind some proxy that removes the SSL encryption
(plain HTTP is used between the proxy and the server), then some specific
configuration is required both on the c2cgeoportal application and on the
proxy:

* The proxy should add a specific header to the requests. For example ``X-Https
  on`` (``X-Https`` is the header name, and ``on`` is the header value).

In Mako templates, if you need to know what scheme is used, you may test the
value of ``request.scheme``. For example::

    var WMTS_OPTIONS = {
    % if request.scheme == 'https':
        url: 'https://my.wmts.server/'
    % else:
        url: 'https://my.wmts.server/'
    % endif
    /* ... */
    };

Application and SSL certificate on the same server
--------------------------------------------------

If the SSL certificate and the application are located on the same server, all
requests will be redirected to https. So you should change the scheme to https
for all url except for some cases that should always use http (typically,
all requests to localhost): see *url* parameter in tilegeneration configuration.

If you apply ssl encryption on your application, you should take care of the
tiles url to use https scheme to avoid mixing secure and insecure contents.

Finally, you should redirect all http requests to https. Depending on your
environment, you may need to request this via your infrastructure support.

In case you load http external resources into your application, you should use
the resourceproxy service as described below.

Loading non https external resources
------------------------------------

If you want to load non https external resources in your https application, you
should use the ``resourceproxy`` service and add the list of hosts you want to access in your project
`vars.yaml` configuration file:

.. code:: yaml

    resourceproxy:
        # list of urls from which it is safe to load content
        targets:
          #exampletargetname: https://www.camptocamp.com/?param1=%s&param2=%s
          rfinfo: https://www.rfinfo.vd.ch/rfinfo.php?no_commune=%s&no_immeuble=%s

Then you can access resources by building urls using the following schema:
``https://<host>/resourceproxy?target=<targetname>&values=(<valueparam1>,...)``.

For example:

``https://geoportail.camptocamp.com/main/resourceproxy?target=rfinfo&values=(175,2633)``

Local certificate checks
------------------------

Certain c2cgeoportal features open a http session to your c2cgeoportal services,
for example the ``checker`` or the ``lingua_extractor``.
If you are running your server in https and wish to disable certificate checks in these
connections, you can achieve this by adding the following configuration element to your ``vars`` file:

.. code:: yaml

    vars:
        http_options:
            verify: False

See other options in parameters of
`requests.Request <https://docs.python-requests.org/en/latest/api.html#requests.Request>`_
